--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<script type="text/javascript" src="rock_paper_scissors.js"></script>
+<script type="text/javascript" src="rock_paper_scissors.js" defer></script>
